--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_storage: ^3.1.5
   image_picker: ^0.6.5+3
   firebase_core: ^0.4.4+3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
