--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  cloud_firestore: ^0.13.5
-  google_sign_in: ^4.4.4
-  firebase_auth: ^0.16.0
-  firebase_storage: ^3.1.5
-  image_picker: ^0.6.5+3
-  firebase_core: ^0.4.4+3
+  cloud_firestore: ^0.13.6
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.16.1
+  firebase_storage: ^3.1.6
+  image_picker: ^0.6.7+2
+  firebase_core: ^0.4.5
   intl: ^0.16.1
 
 dev_dependencies:
