--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   image_picker: ^0.6.7+2
   firebase_core: ^0.4.5
   intl: ^0.16.1
+  flutter_html: ^1.0.0
 
 dev_dependencies:
   flutter_test:
